Fixed margin error on smaller screens

--- a/css/app.css
+++ b/css/app.css
@@ -146,3 +146,11 @@
 .content-wrapper {
   margin-top: 50px;
 }
+
+@media (max-width: 767px)
+{
+    
+  .content-wrapper {
+      margin-top: 100;
+  }
+}
